--- a/odin-javascript/odin-dashboard/css/styles.css
+++ b/odin-javascript/odin-dashboard/css/styles.css
@@ -40,7 +40,7 @@
 
   --card-gap: 1rem;
   --card-width: 300px;
-  --card-height: 150px;
+  --card-height: 155px;
   --card-avatar: 32px;
 
   --transition: 200ms ease;
